# libavif-container

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: gtest.yml
src/avif/: AV1CodecConfigurationBox.hpp  AuxiliaryTypeProperty.hpp  Box.hpp  CleanApertureBox.hpp  ColourInformationBox.hpp  Constants.cpp  Constants.hpp  ContentLightLevelBox.hpp  FileBox.hpp  FileTypeBox.hpp  FullBox.hpp  HandlerBox.hpp  ImageMirrorBox.hpp  ImageRotation.hpp  ImageRotationBox.hpp  ImageSpatialExtentsProperty.hpp  ItemInfoBox.hpp  ItemInfoEntry.hpp  ItemInfoExtension.hpp  ItemLocationBox.hpp  ItemPropertiesBox.hpp  ItemPropertyAssociation.hpp  ItemPropertyContainer.hpp  ItemReferenceBox.hpp  MasteringDisplayColourVolumeBox.hpp  MediaDataBox.hpp  MetaBox.hpp  Parser.cpp  Parser.hpp  PixelAspectRatioBox.hpp  PixelInformationProperty.hpp  PrimaryItemBox.hpp  Query.hpp  RelativeLocationProperty.hpp  Writer.cpp  Writer.hpp
src/avif/av1/: BitStreamReader.cpp  BitStreamReader.hpp  Header.hpp  Padding.hpp  Parser.cpp  Parser.hpp  Query.hpp  SequenceHeader.hpp  TemporalDelimiter.hpp
src/avif/img/: ColorSpace.hpp  Conversion.hpp  Crop.hpp  Image.cpp  Image.hpp  Spec.hpp  Transform.hpp  TransformImpl.hpp
src/avif/img/color/: Constants.hpp  Math.hpp  Matrix.hpp
src/avif/math/: Fraction.hpp
src/avif/util/: File.cpp  File.hpp  FileLogger.cpp  FileLogger.hpp  FourCC.cpp  FourCC.hpp  Logger.cpp  Logger.hpp  StreamReader.cpp  StreamReader.hpp  StreamWriter.cpp  StreamWriter.hpp
src/util/: Logger.cpp  Logger.hpp
test/: ColorTest.cpp
test/av1/: ParseTest.cpp
test/math/: FractionTest.cpp
